bee-common/bee-common-derive/tests/packable/fail/invalid_tag_enum.stderr
error: Tags for variants can only be integers without type annotations.
  --> $DIR/invalid_tag_enum.rs:14:15
   |
14 |     #[packable(tag = [0; 32])]
   |               ^^^^^^^^^^^^^^^
